doc: update with latest run